Estabilizacion de Front v2.1

--- a/petmatch-frontend/src/index.css
+++ b/petmatch-frontend/src/index.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Lobster&family=Luckiest+Guy&display=swap');
+
 /* Estilos Base */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* ... (resto de los estilos) ... */
 
 /* Paleta de Colores con Naranja */
 :root {
